appChart/templates/weatherDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-app-deployment
  labels:
    app: weather-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: weather-app
  template:
    metadata:
      labels:
        app: weather-app
    spec:
      containers:
      - name: flask
        image: 831926627653.dkr.ecr.eu-west-3.amazonaws.com/leumi/app:1.0
        ports:
        - containerPort: 5000
