appChart/templates/weatherService.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-app-service
  labels:
    app: weather-app
spec:
  type: ClusterIP
  selector:
    app: weather-app
  ports:
    - port: 443
      targetPort: 5000
